<resources>
    <string name="app_name">crs_ro</string>

    <string name="title_clothes">Clothes</string>
    <string name="title_seasons">Seasons</string>
    <string name="title_more">More</string>
    <string name="title_notifications">Notifications</string>

    <string name="help_amp_feedback"><![CDATA[Help & feedback]]></string>
    <string name="settings">Settings</string>
    <string name="generate_outfits">Generate Outfits</string>
    <string name="scan_color">Scan color</string>
    <string name="from_gallery">From Gallery</string>
    <string name="add_clothes">Add Clothes</string>

    <plurals name="numberOfClothes">
        <item quantity="one">%d Cloth</item>
        <item quantity="other">%d Clothes</item>
    </plurals>


    <!-- Content Descriptions-->
    <string name="category_image_content_desc">Category Image</string>
</resources>
