<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_clothes"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_clothes" />

    <item
        android:id="@+id/navigation_seasons"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_seasons" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/title_more" />

</menu>
