<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_clothes">

    <fragment
        android:id="@+id/navigation_clothes"
        android:name="com.example.crs_ro.ui.clothes.ClothesFragment"
        android:label="@string/title_clothes"
        tools:layout="@layout/fragment_clothes" />

    <fragment
        android:id="@+id/navigation_seasons"
        android:name="com.example.crs_ro.ui.seasons.SeasonsFragment"
        android:label="@string/title_seasons"
        tools:layout="@layout/fragment_seasons" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.crs_ro.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.example.crs_ro.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more"/>

</navigation>