<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:padding="8dp"
        android:id="@+id/btn_add_clothes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@android:drawable/ic_menu_agenda"
        android:text="@string/add_clothes"
        android:textAllCaps="false" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>

    <Button
        android:padding="8dp"
        android:id="@+id/btn_from_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@android:drawable/ic_menu_gallery"
        android:text="@string/from_gallery"
        android:textAllCaps="false" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>

    <Button
        android:padding="8dp"
        android:id="@+id/btn_scan_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@android:drawable/ic_menu_agenda"
        android:text="@string/scan_color"
        android:textAllCaps="false" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>

    <Button
        android:padding="8dp"
        android:id="@+id/btn_generate_outfits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@android:drawable/ic_menu_agenda"
        android:text="@string/generate_outfits"
        android:textAllCaps="false" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>

    <Button
        android:padding="8dp"
        android:id="@+id/btn_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@android:drawable/ic_menu_gallery"
        android:text="@string/settings"
        android:textAllCaps="false" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>

    <Button
        android:padding="8dp"
        android:id="@+id/btn_help_and_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@android:drawable/ic_menu_help"
        android:text="@string/help_amp_feedback"
        android:textAllCaps="false" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>


</LinearLayout>